syntax = "proto3";

package darmok.protobuf;

import "math.proto";

message TextureAtlasElement {
    string name = 1;
    repeated Uvec2 positions = 2;
    repeated Uvec2 texture_coords = 3;
    repeated uint32 indices = 4;
    Uvec2 size = 5;
    Uvec2 texture_position = 6;
    Vec2 offset = 7;
    Uvec2 original_size = 8;
    Vec2 pivot = 9;
    bool rotated = 10;
}

message TextureAtlas {
    string texture_path = 1;
    repeated TextureAtlasElement elements = 2;
}